--- a/prism-outreach/src/app/templates/menu/menu.component.html
+++ b/prism-outreach/src/app/templates/menu/menu.component.html
@@ -10,20 +10,21 @@
     </div>
     <div class="offcanvas-body">
         <ul class="sidebar-nav" id="sidebar-nav"> 
+           
             <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/dashboard">
                     <i class="fa fa-tachometer"></i>
                     <span class="text-uppercase">Dashboard</span>
                 </a>
             </li>
-
+             @if (userRole == 7 || userRole == 20){
             <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/starperformance">
                     <i class="fa fa-flag"></i>
                     <span class="text-uppercase">Star Performance</span>
                 </a>
             </li>
-
+            
             <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/gapsreport">
                     <i class="fa fa-flag"></i>
@@ -49,7 +50,8 @@
                     <span class="text-uppercase">PLANS MANAGE</span>
                 </a>
             </li>
-
+            }
+             @if (userRole == 7 ){
             <li class="nav-item" style="background-color:transparent!important;">
   <a class="nav-link text-decoration-none d-flex justify-content-between align-items-center"
      data-bs-toggle="collapse"
@@ -74,7 +76,7 @@
       <span class="text-uppercase">File Process Log Report</span></a></li>
   </ul>
 </li>
-
+             }
 
         </ul>
 
