Integrate manage user and risk gap report

--- a/prism-outreach/src/app/templates/menu/menu.component.html
+++ b/prism-outreach/src/app/templates/menu/menu.component.html
@@ -31,12 +31,12 @@
                     <span class="text-uppercase">Risk Gaps Report</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/riskprofile">
                     <i class="fa fa-flag"></i>
                     <span class="text-uppercase">Member Risk Profile</span>
                 </a>
-            </li>            
+            </li>             -->
             
             <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/users">
