--- a/prism-outreach/src/app/views/dashboard/dashboard.html
+++ b/prism-outreach/src/app/views/dashboard/dashboard.html
@@ -2066,6 +2066,47 @@
                                 <h4 align="center">ALT PHONE</h4>
                                 <div class="box_height">
                                     <div class="tbl_scorll">
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <form >
+                                                    <input type="hidden" name="medicaid_id" value="medicaid_id">
+                                                    <div class="col-lg-12  mt-3">
+                                                        <input type="text"
+                                                            placeholder="Alternate Phone No"
+                                                            name="alt_phone_no"
+                                                            id="alt_phone_no"
+                                                            class="form-control text-uppercase"
+                                                            maxlength="10"
+                                                            oninput="this.value = this.value.replace(/[^0-9]/g, '')"
+                                                            inputmode="numeric"
+                                                            required>
+
+                                                    </div>
+                                                    <div class="col-lg-12  mt-3" align="right">
+                                                        <input class="btn btn-primary" type="submit" value="SAVE">
+                                                    </div>
+
+                                                </form>
+                                            </div>
+                                            <div class="col-lg-8">
+                                                <div class="tbl_scorll">
+                                                    <table class="table table-sm" style="font-size:14px;">
+                                                        <thead>
+                                                        <tr>
+                                                            <th class="text-uppercase;">Alt Phone No</th>
+                                                            <th class="text-uppercase;">Added By (INITIAL)</th>
+                                                            <th class="text-uppercase;">Added Date</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>                                                        
+                                                            <tr>
+                                                                <td colspan="3" align="center">No alt phone found.</td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
 
                                     </div>
                                 </div>
