--- a/prism-outreach/src/app/views/gapsreport/gapsreport.html
+++ b/prism-outreach/src/app/views/gapsreport/gapsreport.html
@@ -1,268 +1,138 @@
 <main id="main" class="main" style="margin-top:50px!important;min-height:550px;">
-    <section class="section dashboard">
-        <div class="row">
-            <!-- Left side columns -->
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="row align-items-center">
-                            <!-- Upload form -->
-                            <div class="col-lg-10">
-                                <form method="post" action="/gapsreport/" enctype="multipart/form-data" id="process_member_action" onsubmit="return searchdata();">
-                                    <input type="hidden" name="csrfmiddlewaretoken" value="3g8RWltqdIu8OwqNPlYbfTinLzj11aFbVcuZcF6tLj9KQCmiHdSIuowlpCtq3G7v">
-                                    <div class="row g-2 align-items-center">
-                                        <div class="col-lg-4"></div>
-                                        <div class="col-lg-2">
-                                           <input type="text" value="11/01/2025" name="start_date" id="start_date"  class="form-control text-uppercase datepicker" placeholder="Start Date" required>
-                                        </div>
-                                        <div class="col-lg-2">
-                                             <input type="text" value="11/30/2025" name="end_date" id="end_date"  class="form-control text-uppercase datepicker" placeholder="End Date" required>
-                                        </div>
-                                        <div class="col-lg-4">
-                                            <button type="submit" class="btn btn-primary">SEARCH</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="col-lg-2">
-                                 <a href="/download-users-csv/?start_date=11/01/2025&end_date=11/30/2025"   class="btn btn-primary">DOWNLOAD CSV</a>
-                            </div>
+  <section class="section dashboard">
+    <div class="row">
 
-                        </div>
+      <!-- Search Filters -->
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-body">
+            <div class="row align-items-center">
+              <div class="col-lg-10">
+                <!-- Search Form -->
+                <form (ngSubmit)="searchData()" #searchForm="ngForm">
+                  <div class="row g-2 align-items-center">
+                    <div class="col-lg-4"></div>
+
+                    <!-- START DATE -->
+                    <div class="col-lg-2">
+                      <input 
+                        type="text"
+                        id="start_date"
+                        class="form-control text-uppercase"
+                        placeholder="Start Date"
+                        [value]="formatForDisplay(startDate)"
+                        (change)="updateStartDate($event.target.value)"
+                        autocomplete="off"
+                      />
+
+                      <!-- hidden actual YYYY-MM-DD model -->
+                      <input type="date" class="d-none" [(ngModel)]="startDate" name="start_date">
                     </div>
-                </div>
-            </div>
 
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-body">
-                    <table  class="table" id="gaps">
-                        <thead>
-                        <tr>
-                            <th>MEDICAID ID</th>
-                            <th>TYPE</th>
-                            <th>DIAG CODE</th>
-                            <th>DIAG DESC</th>
-                            <th class="text-uppercase">Observation Date</th>
-                            <th class="text-uppercase">Observation Year</th>
-                            <th class="text-uppercase">Observation Code</th>
-                            <th class="text-uppercase">CPT Code Modifier</th>
-                            <th class="text-uppercase">Observation Code Set</th>
-                            <th class="text-uppercase">Observation Result</th>
-                            <th class="text-uppercase">Service Provider NPI</th>
-                            <th class="text-uppercase">Service Provider Taxonomy Code</th>
-                            <th class="text-uppercase">Service Provider Name</th>
-                            <th class="text-uppercase">Service Provider Type</th>
-                            <th class="text-uppercase">Service Provider RxProviderFlag</th>
-                            <th class="text-uppercase">Provider Group NPI</th>
-                            <th class="text-uppercase">Provider Group Taxonomy Code</th>
-                            <th class="text-uppercase">Provider Group Name</th>
-                            <th class="text-uppercase">Source</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>I5031</td>
-                                <td>Acute diastolic (congestive) heart failure</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>I82409</td>
-                                <td>Acute embolism and thrombosis of unspecified deep veins of unspecified lower extremity</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>I5033</td>
-                                <td>Acute on chronic diastolic (congestive) heart failure</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>Z6841</td>
-                                <td>Body mass index [BMI] 40.0-44.9, adult</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>J439</td>
-                                <td>Emphysema, unspecified</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>E6601</td>
-                                <td>Morbid (severe) obesity due to excess calories</td>
-                                <td>
-                                    11/09/2025
-                                  
-                                </td>
-                                <td>2025</td>
-                                <td>dsfdsfd</td>
-                                <td>111</td>
-                                <td>ICD10</td>
-                                <td>1111</td>
-                                <td>22</td>
-                                <td>222</td>
-                                <td>2222</td>
-                                <td>33</td>
-                                <td>44</td>
-                                <td>55</td>
-                                <td>6</td>
-                                <td>66</td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>I21A1</td>
-                                <td>Myocardial infarction type 2</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                            <tr>
-                                <td>18657544</td>
-                                <td>MODIFIED</td>
-                                <td>E66813</td>
-                                <td>Obesity, class 3</td>
-                                <td>
-                                  
-                                </td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>ICD10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td>CIH</td>
-                            </tr>
-                        
-                        </tbody>
+                    <!-- END DATE -->
+                    <div class="col-lg-2">
+                      <input 
+                        type="text"
+                        id="end_date"
+                        class="form-control text-uppercase"
+                        placeholder="End Date"
+                        [value]="formatForDisplay(endDate)"
+                        (change)="updateEndDate($event.target.value)"
+                        autocomplete="off"
+                      />
 
-                    </table>
-
+                      <!-- hidden actual YYYY-MM-DD model -->
+                      <input type="date" class="d-none" [(ngModel)]="endDate" name="end_date">
                     </div>
-                </div>
-            </div>
 
+                    <div class="col-lg-4">
+                      <button type="submit" class="btn btn-primary">
+                        SEARCH
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+
+              <div class="col-lg-2 text-end">
+                <button class="btn btn-primary" (click)="downloadCsv()">
+                  DOWNLOAD CSV
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-    </section>
+      </div>
+
+      <!-- Results -->
+      <div class="col-lg-12">
+        <div class="card">
+          <div class="card-body">
+
+            <table class="table table-striped table-hover" id="gaps" *ngIf="gapsData.length > 0">
+              <thead class="table-light">
+                <tr>
+                  <th>MEDICAID ID</th>
+                  <th>TYPE</th>
+                  <th>DIAG CODE</th>
+                  <th>DIAG DESC</th>
+                  <th>Observation Date</th>
+                  <th>Observation Year</th>
+                  <th>Observation Code</th>
+                  <th>CPT Modifier</th>
+                  <th>Code Set</th>
+                  <th>Result</th>
+                  <th>Provider NPI</th>
+                  <th>Taxonomy Code</th>
+                  <th>Provider Name</th>
+                  <th>Provider Type</th>
+                  <th>RxProviderFlag</th>
+                  <th>Group NPI</th>
+                  <th>Group Taxonomy</th>
+                  <th>Group Name</th>
+                  <th>Source</th>
+                </tr>
+              </thead>
+
+              <tbody>
+                <tr *ngFor="let gap of gapsData">
+                  <td>{{ gap.medicaid_id }}</td>
+                  <td>{{ gap.TYPE }}</td>
+                  <td>{{ gap.DIAG_CODE || gap.Gap_Code }}</td>
+                  <td>{{ gap.DIAG_DESC }}</td>
+                  <td>{{ gap.ObservationDate | date: 'MM/dd/yyyy' }}</td>
+                  <td>{{ gap.Observation_Year }}</td>
+                  <td>{{ gap.Observation_Code }}</td>
+                  <td>{{ gap.CPT_Code_Modifier }}</td>
+                  <td>{{ gap.Observation_Code_Set }}</td>
+                  <td>{{ gap.Observation_Result }}</td>
+                  <td>{{ gap.Service_Provider_NPI }}</td>
+                  <td>{{ gap.Service_Provider_Taxonomy_Code }}</td>
+                  <td>{{ gap.Service_Provider_Name }}</td>
+                  <td>{{ gap.Service_Provider_Type }}</td>
+                  <td>{{ gap.Service_Provider_RxProviderFlag }}</td>
+                  <td>{{ gap.Provider_Group_NPI }}</td>
+                  <td>{{ gap.Provider_Group_Taxonomy_Code }}</td>
+                  <td>{{ gap.Provider_Group_Name }}</td>
+                  <td>{{ gap.Source }}</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <div *ngIf="gapsData.length === 0 && dataLoaded" class="text-center p-4">
+              <p class="text-muted mb-0">No records found for the selected date range.</p>
+            </div>
+
+            <div *ngIf="!dataLoaded" class="text-center p-4">
+              <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 </main>
