member list in one api, task submit loder, datepicker in add action and add task

--- a/prism-outreach/src/app/templates/menu/menu.component.html
+++ b/prism-outreach/src/app/templates/menu/menu.component.html
@@ -37,7 +37,12 @@
                     <span class="text-uppercase">Member Risk Profile</span>
                 </a>
             </li>             -->
-            
+            <li class="nav-item">
+                <a class="nav-link collapsed text-decoration-none" href="/logreport">
+                    <i class="fa fa-flag"></i>
+                    <span class="text-uppercase">Action Log Report</span>
+                </a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link collapsed text-decoration-none" href="/users">
                     <i class="fa fa-user"></i>
